# kids-game-utilities

./: .gitignore  README.md  pyproject.toml  smoke.sh
app/: package-lock.json  package.json  vite.config.js
app/public/games/platformer/: game.js  index.html  style.css
app/public/games/tic-tac-toe/: index.html
app/src/: App.svelte  app.css
app/src/lib/components/: ArtifactTray.svelte  ChatPanel.svelte  DevPanel.svelte  ProjectSelector.svelte  ReportViewer.svelte  ScreenshotCapture.svelte  ScreenshotSuggestion.svelte  StatusDot.svelte  TriggerControl.svelte
backend/: __init__.py  api.py  chat_bridge.py  http_api.py  runtime_bridge.py  server.py  smoke.py  store.py
docs/: AGENT_FRONTEND_CONTRACT.md  BACKEND_CONTRACTS_V1.md  CAP_BRIEF_LOOM_RIVET_V1.md  IMPLEMENTATION_ARCHITECTURE_V1.md  IMPLEMENTATION_PLAN_V1.md  OVERNIGHT_AUTONOMY_SETUP_V1.md  WORKLOG_LOOM.md  WORKLOG_RIVET.md
tests/: test_api.py  test_chat_bridge.py  test_http_api.py  test_runtime_bridge.py  test_store.py  test_store_properties.py
tests/frontend/: test_contracts.py  test_fix_batch.py
